...
                MapView(routesLocation: $viewModel.routesLocation, needRefresh: $viewModel.needMapRefresh) { idx in
                    viewModel.loadDetailView(idx)
                }.frame(maxWidth: .infinity, maxHeight: 350)
                
                ScrollView(.vertical) {
                    VStack(spacing: 0) {
                        Text("Trips list")
                            .font(Constants.fontTitle)
                            .padding()
                        buildList()
                    }.frame(maxWidth: .infinity)
                }
                .frame(maxWidth: .infinity, maxHeight: .infinity)
...
        VStack {
            HStack {
                Spacer()
                Button {
                    gotoContactUs()
                } label: {
                    Image("contact")
                        .resizable()
                        .scaledToFit()
                        .frame(width: 50, height: 50)
                }
                .buttonStyle(PlainButtonStyle())
                .tag("ContactUs")
...
